--- a/src/style.css
+++ b/src/style.css
@@ -329,6 +329,34 @@ header .navbar {
   color: var(--primary-color);
 }
 
+/* Gallery section */
+.gallery-section {
+  padding: 50px 0 100px;
+}
+
+.gallery-section .gallery-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+}
+
+.gallery-section .gallery-list .gallery-item {
+  overflow: hidden;
+  border-radius: var(--border-radius-s);
+  width: calc(100% / 3 - 32px);
+}
+
+.gallery-section .gallery-item .gallery-image {
+  width: 100%;
+  height: 100%;
+  cursor: zoom-in;
+  transition: 0.3s ease;
+}
+
+.gallery-section .gallery-item:hover .gallery-image {
+  transform: scale(1.3);
+}
+
 @media screen and (max-width: 1024px) {
   .menu-section .menu-list {
     gap: 60px;
@@ -430,11 +458,21 @@ header .navbar {
   .menu-section .menu-list {
     gap: 30px;
   }
+
   .menu-section .menu-list .menu-item {
     width: calc(100% / 2 - 30px);
   }
+
   .menu-section .menu-list .menu-item .menu-image {
     max-width: 200px;
+  }
+
+  .gallery-section .gallery-list {
+    gap: 30px;
+  }
+
+  .gallery-section .gallery-list .gallery-item {
+    width: calc(100% / 2 - 30px);
   }
 }
 
@@ -442,7 +480,8 @@ header .navbar {
   .menu-section .menu-list {
     gap: 60px;
   }
-  .menu-section .menu-list .menu-item {
+  .menu-section .menu-list .menu-item,
+  .gallery-section .gallery-list .gallery-item {
     width: 100%;
   }
 
