feat: add footer

--- a/src/style.css
+++ b/src/style.css
@@ -35,9 +35,14 @@
   --site-max-width: 1300px;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 ul {
   list-style: none;
 }
+
 a {
   text-decoration: none;
 }
@@ -288,6 +293,7 @@ header .navbar {
 }
 
 .testimonials-section .testimonial {
+  user-select: none;
   display: flex;
   padding: 35px;
   text-align: center;
@@ -423,6 +429,42 @@ header .navbar {
   background: transparent;
 }
 
+/* Footer */
+.footer-section {
+  padding: 20px 0;
+  background: var(--dark-color);
+}
+
+.footer-section .section-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer-section :where(.copyright-text, .social-link, .policy-link) {
+  color: var(--white-color);
+  transition: 0.2s ease;
+}
+
+.footer-section .social-link-list {
+  display: flex;
+  gap: 25px;
+}
+
+.footer-section .social-link-list .social-link {
+  font-size: var(--font-size-l);
+}
+
+.footer-section .social-link-list .social-link:hover,
+.footer-section .policy-text .policy-link:hover {
+  color: var(--secondary-color);
+}
+
+.footer-section .policy-text .separator {
+  margin: 0 5px;
+  color: var(--white-color);
+}
+
 @media screen and (max-width: 1024px) {
   .menu-section .menu-list {
     gap: 60px;
@@ -496,7 +538,8 @@ header .navbar {
   }
 
   .hero-section .hero-details :is(.subtitle, .description),
-  .about-section .about-details {
+  .about-section .about-details,
+  .contact-section .contact-form {
     max-width: 100%;
   }
 
@@ -561,5 +604,10 @@ header .navbar {
 
   .testimonials-section .swiper-slide-button {
     display: none;
+  }
+
+  .footer-section .section-content {
+    flex-direction: column;
+    gap: 20px;
   }
 }
